# P2-IC.4700-Lenguajes-

./: README.md
progra/: CHANGELOG.md  progra.cabal  stack.yaml
progra/.stack-work/: stack.sqlite3
progra/src/: Main.hs
progra/src/Backend/: Analisis.hs  AnalisisTemporal.hs  Estadistica.hs  Importacion.hs  Procesamiento.hs
progra/src/Backend/Modules/: Data.json  Importar.json
