cabal-version:       2.2

name:                progra
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/progra#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable progra
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Backend.Importacion,
                       Backend.Procesamiento
  default-language:    Haskell2010
  build-depends:       base >= 4.16 && < 5,
                       aeson,
                       aeson-pretty,
                       bytestring,
                       time,
                       directory,
                       text               
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       

source-repository head
  type:     git
  location: https://github.com/githubuser/progra
